<resources>
    <string name="app_name">Videos_a_Firebase</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="default_web_client_id_strings">web_client_id_in_firebase</string>
    <string name="etTituloVideo">Titulo del Video</string>
    <string name="btnSelectVideo">Seleccionar Video</string>
    <string name="btnUploadVideo">Subir Video</string>
    <string name="tvEstadoVideo">No se ha seleccionado un video</string>
    <string name="tvTituloVideo">Titulo del video: </string>
    <string name="tvAutorVideo">Autor del video: </string>
    <string name="tvFechaSubida">dd/MM/yyyy hh:mm</string>
</resources>