<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTituloVideo"
        android:text="@string/tvTituloVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:layout_above="@+id/tvAutorVideo"
        android:textSize="20sp"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/tvAutorVideo"
        android:text="@string/tvAutorVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvFechaSubida"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#fff"
        android:shadowDy="1"
        android:shadowDx="1"
        android:shadowRadius="2"/>

    <TextView
        android:id="@+id/tvFechaSubida"
        android:text="@string/tvFechaSubida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:textColor="#fff"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>